updated typify processor to latest version

--- a/src/atom/Button/Button.css
+++ b/src/atom/Button/Button.css
@@ -1,5 +1,10 @@
-
 .button {
   background-color: purple;
   color: white;
+}
+
+.button_default {
+  background-color: white;
+  border-color: black;
+  color: black;
 }
