added/moved to use scss instead of css for

--- a/src/atom/Link/Link.scss
+++ b/src/atom/Link/Link.scss
@@ -5,6 +5,9 @@
 
 .linkHover {
   color: blue;
+  &:hover {
+    color: black;
+  }
 }
 
 .linkhover > .linkbutton + .linktest[src='ll'] .linkmore:hover {
